--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,29 +4,45 @@
 {% endblock %}
 
 {% block content %}
-	<form method="post" class="m-3 p-3">
-		{% if error %}
-			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-		{% endif %}
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-md-6">
+				<div class="card shadow-lg p-3 mt-5">
+					<div class="card-body">
+						{% if app.user %}
+							<div class="alert alert-info">
+								Vous êtes connecté en tant que
+								{{ app.user.userIdentifier }},
+								<a href="{{ path('app_logout') }}" class="alert-link">Déconnexion</a>
+							</div>
+						{% endif %}
 
-		{% if app.user %}
-			<div class="mb-3">
-				Vous êtes connecté en tant que
-				{{ app.user.userIdentifier }},
-				<a href="{{ path('app_logout') }}">Déconnection</a>
+						{% if error %}
+							<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+						{% endif %}
+
+						<form method="post" class="form-signin">
+							<h1 class="h3 mb-3 font-weight-normal text-center">Connexion</h1>
+
+							<div class="form-group">
+								<label for="inputEmail" class="form-label">Email</label>
+								<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+							</div>
+
+							<div class="form-group">
+								<label for="inputPassword" class="form-label">Mot de passe</label>
+								<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+							</div>
+
+							<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+							<div class="d-grid gap-2 mt-3">
+								<button class="btn btn-lg btn-primary btn-block" type="submit">Connexion</button>
+							</div>
+						</form>
+					</div>
+				</div>
 			</div>
-		{% endif %}
-
-		<h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
-		<label for="inputEmail">Email</label>
-		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-		<label for="inputPassword">Mot de passe</label>
-		<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-		<button class="btn btn-lg btn-primary" type="submit">
-			Connexion
-		</button>
-	</form>
+		</div>
+	</div>
 {% endblock %}
