Nouvelle mise à jour pour réinitialisé le mot de passe

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,6 +40,10 @@
 								<button class="btn btn-lg btn-primary btn-block" type="submit">Connexion</button>
 							</div>
 						</form>
+						<hr>
+						<div class="text-center">
+							<a href="{{path('reset_password')}}" class="btn btn-outline-success p-1 m-2">Mot de passe oublié</a>
+						</div>
 					</div>
 				</div>
 			</div>
