--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,59 +1,138 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Nos Produits - TOMOKI
+	Nos Produits - TOMOKI
 {% endblock %}
 
 {% block content %}
-<div class="container mt-4">
-    <h1>Nos Produits</h1>
-    <div class="row">
-        <div class="col-md-3">
-            <h3 class="mb-3">Mes Filtres</h3>
-            {{ form_start(form) }}
-            {{ form_end(form) }}
-            <a href="{{ path('products') }}" class="btn btn-danger mt-3">Réinitialiser le filtre</a>
-        </div>
-        <div class="col-md-9">
-            <div class="row">
-                {% for product in products %}
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100">
-                        <a href="{{ path('product', {'slug': product.slug}) }}" class="text-center">
-                            <img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="card-img-top img-fluid" style="max-height: 200px; width: auto;">
-                        </a>
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">{{ product.name }}</h5>
-                            <h6 class="text-muted">{{ product.subtitle }}</h6>
-                            <p class="card-text mt-auto">
-                                <strong>Prix :</strong> {{ (product.price / 100) | number_format(2) }} €
-                            </p>
-                            <p class="card-text">
-                                <strong>Catégorie :</strong> {{ product.category.name }}
-                            </p>
-                            <div class="mt-auto">
-                                <a href="{{ path('product', {'slug': product.slug}) }}" class="btn btn-outline-info">Détails</a>
-                                <a href="{{ path('add_to_cart', {'id': product.id}) }}" class="btn btn-primary">
-                                    Ajouter au panier <i class="fas fa-cart-plus"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <div class="d-flex justify-content-between align-items-center">
-                                <small>Basé sur {{ product.comments | length }} commentaires</small>
-                                {% include 'partials/rating.html.twig' with {'rating': product.AVGRatings()} %}
-                            </div>
-                        </div>
-                    </div>
-                    {% if error %}
-                    <div class="alert alert-danger" role="alert">
-                        <strong>Erreur :</strong> {{ error }}
-                    </div>
-                    {% endif %}
-                </div>
-                {% endfor %}
-            </div>
-        </div>
-    </div>
-</div>
-{% endblock %}
+	<div class="container mt-4">
+		<h1>Nos Produits</h1>
+		<div class="row">
+			<div class="col-md-3">
+				<h3 class="mb-3">Mes Filtres</h3>
+				{{ form_start(form) }}
+				{{ form_end(form) }}
+				<a href="{{ path('products') }}" class="btn btn-danger mt-3">Réinitialiser le filtre</a>
+			</div>
+			<div class="col-md-9">
+				<div class="row">
+					{% for product in products %}
+						<div class="col-md-4 mb-4">
+							<div class="card h-100">
+								<a href="{{ path('product', {'slug': product.slug}) }}" class="text-center">
+									<img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="card-img-top img-fluid" style="max-height: 200px; width: auto;">
+								</a>
+								<div class="card-body d-flex flex-column">
+									<h5 class="card-title">{{ product.name }}</h5>
+									<h6 class="text-muted">{{ product.subtitle }}</h6>
+									<p class="card-text mt-auto">
+										<strong>Prix :</strong>
+										{{ (product.price / 100) | number_format(2) }}
+										€
+									</p>
+									<p class="card-text">
+										<strong>Catégorie :</strong>
+										{{ product.category.name }}
+									</p>
+									<div class="mt-auto">
+										<a href="{{ path('product', {'slug': product.slug}) }}" class="btn btn-outline-info">Détails</a>
+										<a href="{{ path('add_to_cart', {'id': product.id}) }}" class="btn btn-primary">
+											Ajouter au panier
+											<i class="fas fa-cart-plus"></i>
+										</a>
+									</div>
+								</div>
+								<div class="card-footer">
+									<div class="d-flex justify-content-between align-items-center">
+										<small>Basé sur
+											{{ product.comments | length }}
+											commentaires</small>
+										{% include 'partials/rating.html.twig' with {'rating': product.AVGRatings()} %}
+									</div>
+								</div>
+							</div>
+							{% if error %}
+								<div class="alert alert-danger" role="alert">
+									<strong>Erreur :</strong>
+									{{ error }}
+								</div>
+							{% endif %}
+						</div>
+					{% endfor %}
+
+					<div class="d-flex justify-content-center mt-3">
+						{{ knp_pagination_render(products) }}
+					</div>
+
+					{% for product in products %}
+
+						{% if pages > 1 %}
+							<nav>
+								{% set classAlign = (align is not defined) ? '' : align=='center' ? ' justify-content-center' : (align=='right' ? ' justify-content- end' : '') %}
+								{% set classSize = (size is not defined) ? '' : size=='large' ? ' pagination-lg' : (size=='small' ? ' pagination-sm' : '') %}
+								<ul class="pagination{{ classAlign }}{{ classSize }}">
+									{% if previous is not null %}
+										<li class="page-item">
+											<a class="page-link" rel="prev" href="{{ path('accueil', app.request.query.all|merge({'page': previous})) }}">&laquo;&nbsp;Précédent</a>
+										</li>
+									{% else %}
+										<li class="page-item disabled">
+											<span class="page-link">&laquo;&nbsp;Précédent</span>
+										</li>
+									{% endif %}
+									{% if startPage > 1 %}
+										<li class="page-item">
+											<a class="page-link" href="{{ path('accueil', app.request.query.all|merge({'page': 1})) }}">1</a>
+										</li>
+										{% if startPage == 3 %}
+											<li class="page-item">
+												<a class="page-link" href="{{ path('accueil', app.request.query.all|merge({'page': 2})) }}">2</a>
+											</li>
+										{% elseif startPage != 2 %}
+											<li class="page-item disabled">
+												<span class="page-link">&hellip;</span>
+											</li>
+										{% endif %}
+									{% endif %}
+									{% for page in pagesInRange %}
+										{% if page != current %}
+											<li class="page-item">
+												<a class="page-link" href="{{ path('accueil', app.request.query.all|merge({'page': page})) }}">{{ page }}</a>
+											</li>
+										{% else %}
+											<li class="page-item active">
+												<span class="page-link">{{ page }}</span>
+											</li>
+										{% endif %}
+									{% endfor %}
+									{% if pages > endPage %}
+										{% if pages > (endPage + 1) %}
+											{% if pages > (endPage + 2) %}
+												<li class="page-item disabled">
+													<span class="page-link">&hellip;</span>
+												</li>
+											{% else %}
+												<li class="page-item">
+													<a class="page-link" href="{{ path('accueil', app.request.query.all|merge({'page': (pages - 1)})) }}">{{ pages -1 }}</a>
+												</li>
+											{% endif %}
+										{% endif %}
+										<li class="page-item">
+											<a class="page-link" href="{{ path('accueil', app.request.query.all|merge({'page': pages})) }}">{{ pages }}</a>
+										</li>
+									{% endif %}
+									{% if next is not null %}
+										<li class="page-item">
+											<a class="page-link" rel="next" href="{{ path('accueil', app.request.query.all|merge({'page': next})) }}">Suivant&nbsp;&raquo;</a>
+										</li>
+									{% else %}
+										<li class="page-item disabled">
+											<span class="page-link">Suivant&nbsp;&raquo;</span>
+										</li>
+									{% endif %}
+								</ul>
+							</nav>
+						{% endif %}
+					{% endfor %}
+
+				{% endblock %}
