--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -101,7 +101,9 @@
 		<script src="{{asset('assets/js/jquery-3.7.1.min.js')}}"></script>
 		<script src="{{asset('assets/js/bootstrap.bundle.min.js')}}"></script>
 
-		{% block javascript %}{% endblock %}
+		{% block javascript %}
+		
+		{% endblock %}
 	</body>
 </html>
 
